docs: ADR-0180 addendum -- sites 5-7 chartered
Sites 5 (decide :merge, 34.06% CPU / 21.01% allocation), 6 (decide
:bed-swap, 31.38% / 29.98%) and 7 (the in-run and standalone check-all,
18.79% of generate and 49.85% of check), in the record's own "The four
sites" format: scan, index, draw/allocation status, equivalence
argument, obligation. R-order-2 renumbers the charter's own site 5 to
site 7 and re-scopes it; the addendum states that rather than editing
the section above it.

One :eligible-index concern with two views (merge: status not in
#{:new :merged}; bed-swap: admitted with a location), the bed-swap view
strictly contained in the merge view, which is why one sub-map carries
both and the order argument is made once.

R-hash-order's argument and its hole, both MEASURED this session rather
than asserted: PersistentHashMap seq order is insertion-independent
(2,000 ids, forward vs reverse identical; a 697-key shuffled sub-map
reproduces the parent's filtered order), and the full-32-bit-hasheq
collision hole is REAL at scale -- seed 424242 has exactly one colliding
patient-id pair at 45,000 and at 67,500 (PID-032071-30c64e95 /
PID-038357-4bf55dc9) and none at 2,500/7,500/22,500, so every committed
cell, the bracket and the oracle are blind to it. A SECOND hole the
ruling does not name: {} is a PersistentArrayMap below nine entries and
iterates in insertion order, so the carrier must be a PersistentHashMap
from empty or it diverges on the first merge of every run and in every
hand-built test world.

R-already-merged's proof in three steps -- evolve :merge's :merged arm
sets the status for both merge emitters, :merged is absorbing, and both
paths to merged-id already exclude it -- plus what the proof rests on
(the log-read and the world-read agree because the world is the fold of
the log) and why the existing scripted test cannot distinguish the two
guards.

Site 7's design, and two corrections to its price: the fourteen
engine/replay sites are TEXTUAL, and one che